fix for flicker problem when hovering a tooltip element

--- a/styles/app/_app-styles.scss
+++ b/styles/app/_app-styles.scss
@@ -140,6 +140,11 @@ blockquote {
   }
 }
 
+/* Fix for flickering tooltip bug */
+.tooltip {
+  pointer-events: none;
+}
+
 /* Larger tooltip for emission scope icon */
 .emission-scope-icon-tooltip {
   text-align: left;
